marketplace-middleware/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: marketplace-middleware
  namespace: marketplace-middleware
spec:
  rules:
    - host: marketplaces-api-staging.zebrands.mx
      http:
        paths:
          - backend:
              service:
                name: marketplace-middleware
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
